api-reference/v3/accounting/purchase-orders/create-purchase-orders.mdx
---
version: "v3"
openapi: openapi_v3 post /accounting/purchase_orders
---

A **Purchase Order** is a record of goods or services purchased from a vendor

## Additional Required Fields

To successfully create a purchase order, certain fields must be included in the raw_data object of the request body. The required fields are as follows:

| Integration           | Field    | Description                         | Required |
| --------------------- | -------- | ----------------------------------- | -------- |
| SAGE_CLOUD_ACCOUNTING | tax_code | The tax code for the purchase order | Yes      |
| MYOB_BUSINESS         | tax_code | The tax code for the purchase order | Yes      |

<RequestExample>

```bash cURL
curl --request POST \
  --url https://api.rootfi.dev/v3/accounting/purchase_orders \
  --header 'Content-Type: application/json' \
  --header 'api_key: <api-key>' \
  --data '{
  "company_id": 1,
  "data": [
    {
      "contact_id": "123456",
      "document_number": "ROOTFI01",
      "posted_date": "2021-09-28T15:00:00.000Z",
      "delivery_date": "2021-09-28T15:00:00.000Z",
      "currency_id": "GBP",
      "bill_ids": [],
      "line_items": [
        {
          "account_id": "123456",
          "quantity": 1,
          "item_id": "123456",
          "tax_id": "123456",
          "unit_amount": 100,
          "total_discount": 0,
          "description": "Test Item"
        }
      ]
    }
  ]
}'

```

```javascript NodeJS
import { RootFiClient } from "rootfi-api";
const rootfi = new RootFiClient({ apiKey: "<api_key>" });

await rootfi.accounting.purchaseOrder.create({
  company_id: 1,
  data: [
    {
      contact_id: "123456",
      document_number: "ROOTFI01",
      posted_date: "2021-09-28T15:00:00.000Z",
      delivery_date: "2021-09-28T15:00:00.000Z",
      currency_id: "GBP",
      bill_ids: [],
      line_items: [
        {
          account_id: "123456",
          quantity: 1,
          item_id: "123456",
          tax_id: "123456",
          unit_amount: 100,
          total_discount: 0,
          description: "Test Item",
        },
      ],
    },
  ],
});
```

</RequestExample>
